# move-mind-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  config.py
app/api/: __init__.py  app.py  dependencies.py
app/api/routes/: chat.py  health.py
app/chains/: __init__.py  answer_chain.py  base.py  classify_chain.py  query_rewrite_chain.py  router_chain.py
app/graphs/: __init__.py  agent.py  constants.py  state.py
app/graphs/nodes/: __init__.py  classify_question.py  generate_answer.py  retrieve_docs.py  rewrite_question.py  route_query.py
app/models/: schemas.py
app/prompts/: __init__.py  templates.py
app/rag/: __init__.py  chain.py  chunks_loader.py  ingestion.py  retriever.py  retriever_registry.py
app/tools/: __init__.py  search.py
app/ui/: __init__.py  streamlit_app.py
app/utils/: helpers.py
data/: eval_results.json
data/raw/confluence/: index.md
data/raw/confluence/architecture/: code-quality.md  firebase.md  overview.md  redux.md  theming.md
data/raw/confluence/features/: action-builder.md  history-service.md  journey-canvas.md
data/raw/confluence/operations/: code-quality-audit-plan.md
notebooks/: 1-data-preprocessing.ipynb  2-ingestion.ipynb  3-retrieval.ipynb  4-langgraph-rag.ipynb  5-evaluation.ipynb  6-memory.ipynb  7-reranking.ipynb  8-hybrid-search.ipynb  9-adaptive-rag.ipynb
notebooks/review/: 1-data-preprocessing.ipynb
scripts/: ingest.py  run_all.sh
tests/: test_chains.py  test_graphs.py  test_rag.py
